<resources>
    <string name="app_name">My WebView</string>
    <!--header_layout_drawer-->
    <string name="title_header_drawer">نمایش دهنده وب</string>
    <string name="description_header_drawer">توسعه دهنده: محمّد کریمی</string>
    <!--action_main_bar-->
    <string name="hint_input_text_search">جست و جو…</string>
    <string name="hint_input_text_find_in_page">یافتن در صفحه</string>
    <!--activity_main-->
    <string name="desktop_mode_toggle">حالت دسکتاپ</string>
    <string name="color_inversion_toggle">وارونگی رنگ</string>
    <!--bottom_navigation_menu-->
    <string name="forward">بعدی</string>
    <string name="back">قبلی</string>
    <string name="new_tab">زبانه جدید</string>
    <string name="home_page">صفحه اصلی</string>
    <string name="open_menu">منو</string>
    <!--new text-->
    <string name="toggle_desktop_mode">حالت دسکتاپ</string>
    <string name="toggle_night_mode">حالت تاریک</string>
    <string name="clear_all_history">حذف تمام تاریخچه مرور</string>
    <string name="find_in_page">جست و جو در صفحه</string>
    <string name="list_downloads">لیست دانلود ها</string>
    <string name="print_page_pdf">پرینت صفحه</string>
    <string name="share_link">اشتراک صفحه</string>
    <string name="exit">بستن برنامه</string>
    <string name="google">گوگل</string>
    <string name="bing">بینگ</string>
    <string name="yahoo">یاهو</string>
    <string name="main_page">صفحه اصلي</string>
    <string name="remove_tab">حذف زبانه</string>
</resources>