<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/scrollPopup"
    android:background="@drawable/background_round_layout">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggleDesktopMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_desktop_mode"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggleNightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_night_mode"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/clearAllHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_history"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/findInPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_in_page"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/showListDownloads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_downloads"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/printInPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_page_pdf"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/shareLinkCurrentUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_link"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/mainPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_page"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/exitApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>
</ScrollView>